# RelocaTE3

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  PLAN.md  README.md  pixi.toml  pyproject.toml  requirements.txt
.trunk/: trunk.yaml
RelocaTE3/: RelocaTE3_main.py
docs/source/: api.rst  conf.py  index.rst  installation.rst  migration.rst  output.rst  usage.rst
examples/: example.py
src/RelocaTE3/: ReadLibrary.py  __init__.py  __main__.py  align.py  characterize.py  cli.py  genome_align.py  insertions.py  librelocate.py  main_menu.py  models.py  pipeline.py  reference_te.py  trim.py
tests/: __init__.py  acceptance_test.py  align_test.py  characterize_test.py  genome_align_test.py  insertions_test.py  main_test.py  pipeline_test.py  reference_te_test.py  relocate_test.py  trim_test.py
tests/data/: RiceTE.fa  mping.fa
tests/data/sim_genome/: MSU7.Chr3_2M.fa.amb  MSU7.Chr3_2M.fa.ann  MSU7.Chr3_2M.fa.bwt  MSU7.Chr3_2M.fa.pac  MSU7.Chr3_2M.fa.sa
